5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1671_1099.log
== TEST (2019-04-24 15:40:44) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("nao e triangulo")

else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		if ((x == y) or (y == z)):
			print("isosceles")
		else:
			print("escaleno")


-- OUTPUT:
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:41:04) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("nao e triangulo")

else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		if ((x == y) or (y == z)):
			print("isosceles")
		else:
			print("escaleno")


-- EXECUTION TIME:
0.141639
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:

-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
nao e triangulo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:42:24) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		if ((x == y) or (y == z)):
			print("isosceles")
else:
	print("escaleno")


-- EXECUTION TIME:
0.211295
-- ERROR:
  File "/home/codebench/codes/1671/1099/main.py", line 13
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:42:26) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		if ((x == y) or (y == z)):
			print("isosceles")
else:
	print("escaleno")


-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:42:48) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		if ((x == y) or (y == z)):
			print("isosceles")
		else:
			print("escaleno")


-- EXECUTION TIME:
0.159164
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:

-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
nao e triangulo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:42:48) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x >= y + z) or (y >= x + z) or (z >= y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		if ((x == y) or (y == z)):
			print("isosceles")
		else:
			print("escaleno")


-- OUTPUT:
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:49:19) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x > y + z) or (y > x + z) or (z > y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		if ((x == y) or (y == z)):
			print("isosceles")
		else:
			if ((x == y) not (y == z)):
			print("escaleno")
print("Tipo de triangulo")


-- ERROR:
File "XXXX", line 14
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:49:41) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x > y + z) or (y > x + z) or (z > y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		print("equilatero")
	else:
		if ((x == y) or (y == z)):
			print("isosceles")
		else:
			if ((x == y) not (y == z)):
				print("escaleno")
print("Tipo de triangulo")


-- ERROR:
File "XXXX", line 14
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:50:47) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

if ((x > y + z) or (y > x + z) or (z > y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo" + msg)


-- ERROR:
File "XXXX", line 14
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:52:10) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

print 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo" + msg)


-- ERROR:
File "XXXX", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:52:16) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

print 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	print("nao e triangulo")
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo" + msg)


-- ERROR:
File "XXXX", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:23:43) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

print 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo")
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo: " + msg)


-- ERROR:
File "XXXX", line 7
    msg = "nao e triangulo")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 19:24:02) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

print 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo: " + msg)


-- EXECUTION TIME:
0.131631
-- ERROR:
  File "/home/codebench/codes/1671/1099/main.py", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:25:59) 
-- CODE:
x = int(input("Lado a: "))
y = int(input("Lado b: "))
z = int(input("Lado c: "))

print ("Entradas: ",a, ",", b, ",",c) 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo: " + msg)


-- ERROR:
File "XXXX", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 19:26:47) 
-- CODE:
x = float(input("Lado a: "))
y = float(input("Lado b: "))
z = float(input("Lado c: "))

print ("Entradas: ",a, ",", b, ",",c) 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo: " + msg)


-- EXECUTION TIME:
0.137765
-- ERROR:
  File "/home/codebench/codes/1671/1099/main.py", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:28:41) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

print ("Entradas: ",a, ",", b, ",",c) 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo: " + msg)


-- ERROR:
File "XXXX", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 19:28:51) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

print ("Entradas: ",a, ",", b, ",",c) 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "invalido"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("Tipo de triangulo: " + msg)


-- EXECUTION TIME:
0.165866
-- ERROR:
  File "/home/codebench/codes/1671/1099/main.py", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:33:29) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

print ("Entradas: ",a, ",", b, ",",c) 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("tipo de triangulo: " + msg)


-- ERROR:
File "XXXX", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 19:35:27) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

print ("Entradas: ",x, ",", y, ",",z) 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("tipo de triangulo: " + msg)


-- EXECUTION TIME:
0.167353
-- ERROR:
  File "/home/codebench/codes/1671/1099/main.py", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:35:38) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

print ("Entradas: ",x, ",", y, ",",z) 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"
print("tipo de triangulo: " + msg)


-- ERROR:
File "XXXX", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:37:18) 
-- CODE:
x = float(input("Lado x: "))
y = float(input("Lado y: "))
z = float(input("Lado z: "))

print ("Entradas: ",x, ",", y, ",",z) 
if ((x > y + z) or (y > x + z) or (z > y + x)):
	msg = "nao e triangulo"
else:
	if ((x == y) and (y == z)):
		msg = "equilatero"
	else:
		if ((x == y) or (y == z)):
			msg = "isosceles"
		else:
			if ((x == y) not (y == z)):
				msg = "escaleno"

print("Tipo de triangulo: " + msg)


-- ERROR:
File "XXXX", line 15
    if ((x == y) not (y == z)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 08:01:46) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))

print ("Entradas: ",a, ",", b, ",",c ) 
if ((a > b+c) or (b > a+c) or (c > a+b)):
	msg = "invalido"
else:
	if ((a == b) and (b == c)):
		msg = "equilatero"
	else:
		if ((a == b) or (b == c) or (c == a)):
			msg = "isosceles"
		else:
			msg = "escaleno"

print("Tipo de triangulo: " + msg)


-- OUTPUT:
Entradas:  2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 08:02:08) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))

print ("Entradas: ",a, ",", b, ",",c ) 
if ((a > b+c) or (b > a+c) or (c > a+b)):
	msg = "invalido"
else:
	if ((a == b) and (b == c)):
		msg = "equilatero"
	else:
		if ((a == b) or (b == c) or (c == a)):
			msg = "isosceles"
		else:
			msg = "escaleno"

print("Tipo de triangulo: " + msg)


-- EXECUTION TIME:
0.113411
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas:  2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
